# SRM

src/: CMakeLists.txt  meson.build  meson_options.txt
src/lib/: SRMBuffer.c  SRMEGL.h  SRMFormat.c
src/lib/private/: SRMBufferPrivate.c  SRMConnectorPrivate.c
src/lib/private/modes/: SRMRenderModeCPU.c  SRMRenderModePrime.c
